base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
  namespace: default
spec:
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
